# ralph-wiggum

./: .gitignore  README.md  initial-spec.md  pyproject.toml
.claude/: CLAUDE.md  settings.json  settings.local.json
.ralph/: settings.json
docs/exploration/: claude-code-optimisation.md  feature-recommendations.md  subagent-patterns.md  vscode-extension-dev-guide.md  vscode-extension-spec.md
ralph/: cli.py  commands.py  config.py  dag.py  locks.py  parse.py  run.py
ralph-vscode/: .vscodeignore  README.md  esbuild.js  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
ralph-vscode/docs/: node-pty-output-fix.md
ralph-vscode/patches/: node-pty+1.1.0.patch
ralph-vscode/src/: extension.ts  fileWatcher.ts  messages.ts  panelManager.ts  processManager.ts  sidebarProvider.ts
ralph-vscode/src/__tests__/: messages.test.ts  processManager.test.ts
ralph-vscode/webview/: app.css  app.tsx  index.html
ralph-vscode/webview/components/: CommandBar.tsx  CommandDialog.tsx  FlagPanel.tsx  OutputArea.tsx  StdinInput.tsx  TaskProgress.tsx
ralph-vscode/webview/layouts/: Layout.tsx
ralph-vscode/webview/lib/: utils.ts
templates/: comment.md  execute.md  execute_async.md  generate_tasks.md  init.md  interview.md  interview_questions.md  questions.md  results_summary.md  retry.md  summarise.md  validate.md
tests/: test_cmd_comment.py  test_cmd_enrich.py  test_cmd_execute.py  test_cmd_init.py  test_cmd_interview.py  test_cmd_oneshot.py  test_cmd_pr.py  test_cmd_retry.py  test_cmd_undo.py  test_cmd_validate.py  test_dag.py  test_locks.py  test_run_async.py
(+4 files in other folders)
