[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ralph-wiggum"
version = "0.1.0"
description = "CLI-driven agentic coding framework"
requires-python = ">=3.11"
dependencies = [
    "prompt_toolkit",
    "filelock",
]

[project.scripts]
ralph = "ralph.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ralph*"]
